# conchordal

./: .gitattributes  .gitignore  1  AGENTS.md  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Rhai.toml  a.tgz  cc.xml  conchordal-core-strengthening-proposal.md  justfile  log6  main.tex  repomix-output.xml  repomix.config.json
.github/workflows/: ci.yml  deploy.yml  web_deploy.yml
attic/core/: nsgt_fft.rs
benches/: synth_resonator_bank.rs
docs/: hereditary_adaptation_samples.md  principles.md  step4_update.md
docs/design-notes/: crowding-unison-avoidance.md  dcc-neurocognitive-hierarchy.md  listener-twin.md  neural-rhythm-meter.md  placement-vocabulary.md  tension.md  voice-movement-redesign.md
docs/maintenance/: update_technote_prompt.md
docs/rhai_book/: book.toml
docs/roadmap/: v0.4.0-alpha-acceptance.md  v0.4.0-alpha-spec.md  v0.4.0-demo-audition.md  v0.4.0-m1-api-decisions.md  v0.4.0-rhythm-architecture-audit.md  v0.4.0-rhythm-model-design.md  v0.4.0-rhythm-redesign.md  v0.4.0-rhythm-report-runs.md  v0.4.0-rhythm-report-schema.md
docs/schemas/: agent_patch.md  brain_config.md  life_config.md  spawn_method.md  timbre_genotype.md
examples/: gen_schemas.rs  generate_script_docs.rs
examples/paper/: README.md  e4_abcd_analyze.rs  justfile  main.rs  paper_plots.rs  sim.rs
rhai-defs/: conchordal.d.rhai
samples/: 01_a_single_voice.rhai  02_constellation.rhai  03_gravity.rhai  04_tension.rhai  05_settling.rhai  06_bells.rhai  07_heartbeat.rhai  08_murmuration.rhai  09_rain.rhai  10_generations.rhai  11_autumn_cycle.rhai  12_emergence_and_resolution.rhai  README.md  beta_lock_demo.rhai  composition.rhai  drift_and_flow.rhai  harmonic_circle.rhai  harmonic_density.json5  harmonic_density.rhai  harmonic_individual.rhai  harmonic_stream.rhai  harmonicity.json5  harmonicity.rhai  hybrid_ecosystem.rhai  kuramoto.rhai  low_harmonicity.json5  low_harmonicity.rhai  mirror_dualism.rhai  organic_harmony.rhai  polyphony_tension_resolution.rhai  progression_autumn_cycle.rhai  progression_autumn_cycle_fixed.rhai  progression_ii_v_i.rhai  random_log_uniform.json5  random_log_uniform.rhai  rhythm_vitality_demo.rhai  sample_scenario.json5  sample_scenario.rhai  scan_pursue_demo.rhai  self_organizing_rhythm.rhai  (+8 more)
samples/00_intent_debug/: intent_chord_sync.rhai  intent_microtiming.rhai  intent_polyrhythm_3_2.rhai  intent_smoke.rhai
samples/00_validation/: rhythm_timing_validation.rhai
samples/01_agent_intents/: agent_intent_smoke.rhai
samples/01_fundamentals/: basic.rhai  psychoacoustic_test.rhai  readme_example.rhai  spawn_basics.rhai  tone_generator.rhai
samples/02_mechanisms/: agent_interaction.rhai  hillclimb_stable_convergence.rhai  modalbody_timbres_showcase.rhai  modes_generation_showcase.rhai  rhythmic_sync.rhai  spectral_gap.rhai
samples/03_structures/: autumn_cycle.rhai  basic_progression.rhai  cadence_ii_v_i.rhai  tension_resolution.rhai
samples/04_ecosystems/: README.md  conchordal_ecology.rhai  conchordal_flagship.rhai  consonance_ecology.rhai  consonance_field_control.rhai  drift_flow.rhai  emergent_harmony.rhai  entrained_beat.rhai  flow_timing_field.rhai  hereditary_adaptation.rhai  hereditary_adaptation_heredity_only.rhai  hereditary_adaptation_heredity_only_paper_replay.rhai  hereditary_adaptation_heredity_selection.rhai  hereditary_adaptation_heredity_selection_approx_loo.rhai  hereditary_adaptation_heredity_selection_paper_replay.rhai  hereditary_adaptation_random_only.rhai  hereditary_adaptation_random_only_paper_replay.rhai  hereditary_adaptation_random_selection.rhai  hereditary_adaptation_random_selection_approx_loo.rhai  hereditary_adaptation_random_selection_paper_replay.rhai  metric_beat_foundation.rhai  mirror_dualism.rhai  mirror_dualism_fixed_population.rhai  pulse_foundation.rhai  rhythm_harmony_ecology.rhai  symbiotic_field.rhai  temporal_scaffolding_off.rhai  (+2 more)
scripts/: generate_rhai_docs.sh  update_technote.py
src/: app.rs  cli.rs  config.rs  core.rs  dcc_coupler.rs  lib.rs  main.rs  scenario.rs
tests/: agent_intents.rs  agent_notes.rs  body_envelope_propagates_to_tone_adsr.rs  choose_freq_by_consonance.rs  choose_onset_by_density.rs  compile_only_samples.rs  conductor_post_note_routes_to_world.rs  config_restore.rs  control_rate_dt_invariance.rs  empty_life_map_ok.rhai  gate_clock.rs  gate_plan_commit_onset.rs  generator_model_pred_cache.rs  intent_board.rs  intent_renderer_body_snapshot.rs  intent_renderer_limiter.rs  intent_renderer_onset.rs  listener_twin_validation_fixture.rs  log2space_scan_invariants.rs  metabolism_policy.rs  note_board.rs  note_renderer_body_snapshot.rs  note_renderer_limiter.rs  note_renderer_onset.rs  phonation_birth.rs  phonation_rate_is_time_based.rs  phonation_sustain.rs  pitchcore_candidates.rs  plan_board.rs  plan_intents_predc_eval_tick.rs  plan_intents_release_amp.rs  post_intent_action.rs  post_note_action.rs  pred_c_pitch_choice.rs  pred_c_tf_gesture_choice.rs  predictive_rhythm_bank.rs  render_binary.rs  rhai_book_examples.rs  rhai_defs_in_sync.rs  routing_bus_separation.rs  (+14 more)
web/: AGENTS.md  add_zwsp.py  config.toml  contact.toml  generate_pdfs.sh  navigation.toml
(+285 files in other folders)
