[package]
name = "conchordal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Emergent psychoacoustic ecosystem."
repository = "https://github.com/ktakahashi74/conchordal"
keywords = ["audio", "alife", "music", "art", "rust"]
categories = ["multimedia::audio", "science"]

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
lto = true
#debug = true


[dependencies]
anyhow = "1.0"

clap = { version = "4.5", features = ["derive"]}
ctrlc = "3.4"

# GUI
eframe = "0.33"
egui = "0.33"
egui_plot = "0.34"

# Concurrency
rayon = "1.10"
crossbeam-channel = "0.5"

# DSP / Math
rustfft = "6"
rand = "0.9"

# Serde for future config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
toml = "0.8"

# Logging / tracing (optional)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Audio I/O
cpal = "0.15"
hound = "3.5"

ringbuf = "0.4"
approx = "0.5"
json5 = "0.4.1"
rhai = { version = "1.19", features = ["metadata", "serde"] }

[dev-dependencies]
plotters = "0.3"
rhai-autodocs = "0.10"
