[package]
name = "conchordal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A bio-acoustic instrument for generative composition"
repository = "https://github.com/ktakahashi74/conchordal"
keywords = ["audio", "alife", "music", "art", "sound","synthesizer"]
categories = ["multimedia::audio"]

[lib]
test = false

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
lto = true
#debug = true


[dependencies]
anyhow = "1.0"

clap = { version = "4.5", features = ["derive"]}
ctrlc = "3.5"

# GUI
egui = "0.33"
egui_plot = "0.34"

# Concurrency
crossbeam-channel = "0.5"

# DSP / Math
rustfft = "6"
rand = "0.9"

# Config (TOML)
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"


# Logging / tracing (optional)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Audio I/O
cpal = "0.17"
hound = "3.5"

ringbuf = "0.4"
rhai = "1.23"
wide = { version = "1.1.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }

[features]
default = ["bench-hooks", "simd-wide"]
simd-wide = ["dep:wide"]
bench-hooks = []

[dev-dependencies]
approx = "0.5"
plotters = "0.3"
walkdir = "2.5"
