[package]
name = "conchordal"
version = "0.4.0-dev"
edition = "2024"
default-run = "conchordal"
license = "MIT OR Apache-2.0"
description = "A bio-acoustic instrument for generative composition"
repository = "https://github.com/ktakahashi74/conchordal"
keywords = ["audio", "alife", "music", "art", "sound","synthesizer"]
categories = ["multimedia::audio"]

[[bin]]
name = "conchordal"
path = "src/main.rs"

[[bin]]
name = "conchordal-render"
path = "src/bin/render.rs"

[[bin]]
name = "gen_rhai_defs"
path = "src/bin/gen_rhai_defs.rs"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
lto = true
#debug = true

# DSP code intentionally uses mutation-style struct construction and indexed
# loops for clarity around parallel arrays and incremental builders. These
# style lints fire across the kernel and engine layers; silencing them keeps
# `cargo clippy -- -D warnings` actionable for real issues.
[lints.clippy]
field_reassign_with_default = "allow"
needless_range_loop = "allow"
type_complexity = "allow"

[dependencies]
anyhow = "1.0"

clap = { version = "4.6", features = ["derive"]}
ctrlc = "3.5"

# GUI
egui = "0.34"
egui_plot = "0.35"

# Concurrency
crossbeam-channel = "0.5"

# DSP / Math
rustfft = "6"
rand = "0.10"
plotters = { version = "0.3", optional = true, default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }

# Config (TOML)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"


# Logging / tracing (optional)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Audio I/O
cpal = "0.17"
hound = "3.5"

ringbuf = "0.5"
rhai = { version = "1.24", features = ["metadata"] }
wide = { version = "1.4.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }

[features]
default = ["simd-wide"]
simd-wide = ["dep:wide"]
plotcheck = ["dep:plotters"]

[dev-dependencies]
approx = "0.5"
walkdir = "2.5"
